[gd_scene load_steps=4 format=3 uid="uid://c6fhp5oy7sk3b"]

[ext_resource type="Script" uid="uid://bt416py6dhxgi" path="res://scripts/menu.gd" id="1_lti8b"]
[ext_resource type="Texture2D" uid="uid://jq5pu4jga3l1" path="res://assets/snakez_wordlogo_transparent.png" id="2_ouk20"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ouk20"]
bg_color = Color(0.756863, 1, 0.721569, 1)

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 245.0
offset_top = 68.0
offset_right = 245.0
offset_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lti8b")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -378.0
offset_top = -121.0
offset_right = -100.0
offset_bottom = 54.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ouk20")

[node name="SnakezWordlogoTransparent" type="Sprite2D" parent="."]
position = Vector2(535, 63)
texture = ExtResource("2_ouk20")

[node name="Play" type="Button" parent="."]
layout_mode = 0
offset_left = 299.0
offset_top = 212.0
offset_right = 762.0
offset_bottom = 358.0
theme_override_font_sizes/font_size = 60
text = "Play"

[node name="Credits" type="Button" parent="."]
layout_mode = 0
offset_left = 299.0
offset_top = 385.0
offset_right = 762.0
offset_bottom = 531.0
theme_override_font_sizes/font_size = 60
text = "Credits"

[node name="Exit" type="Button" parent="."]
layout_mode = 0
offset_left = 299.0
offset_top = 560.0
offset_right = 762.0
offset_bottom = 706.0
theme_override_font_sizes/font_size = 60
text = "Exit"

[connection signal="pressed" from="Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_exit_pressed"]
